--- a/makers.css
+++ b/makers.css
@@ -25,7 +25,7 @@
 	display: inline-block;
     text-align: center;
     color: #FFF;
-    opacity: 0.7;
+    opacity: 0.46;
     font-size: 100;
 	margin:0 auto;}
 /*fin de encabezado*/
@@ -123,8 +123,10 @@
 }
 
 .carousel-modal-controls {
-  width: 65%;
+  width: 45%;
   position: absolute;
+  display: flex;
+  justify-content: space-between;
   min-width: 320px;
   z-index: 5;
   color: white;
